[tool.poetry]
name = "supergreen"
version = "0.0.1"
description = "Supergreen, the data scientist's secret sauce, analyzes production prediction problems caused by those sly tabular-trained machine learning models."
authors = ["Itai Friendinger <itaifrenkel@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
