[tool.poetry]
name = "supergreen"
version = "0.0.1"
description = "Supergreen, a Python package dedicated to analyzing machine learning prediction errors, primarily focuses on models trained on tabular data."
authors = ["Itai Friendinger <itaifrenkel@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
